gcc/testsuite/g++.dg/cpp1y/lambda-init9.C
// { dg-do compile { target c++1y } }

void f()
{
  [&x=1]{};   // { dg-error "cannot capture|invalid initialization" }
}
